# call-center-voice-agent-accelerator

./: .gitignore  README.md
docs/: CONCURRENT_CALLS.md  IMPLEMENTATION_SUMMARY.md
server/: .env-sample.txt  pyproject.toml  server.py
server/app/handler/: acs_event_handler.py  acs_media_handler.py  connection_manager.py
server/app/services/: email_service.py
server/app/tools/: README.md  __init__.py  appointment_booking.py  email_summary.py  knowledge_base.py  order_status.py  utils.py
server/tests/: __init__.py  test_connection_manager.py  test_handler_isolation.py
